--- a/bootstrap-day-1.html
+++ b/bootstrap-day-1.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="bootstrap-5.3.2-dist/css/bootstrap.min.css">
 </head>
 <body>
-    <h1>
+    <h1 class="text-danger bg-dark">
         Hello Wonderfull World.
     </h1>
-    <button class="btn btn-light">light</button>
+    <div class="bg-secondary" style="margin-bottom: 10px;">
+        <button class="btn btn-light">light</button>
     <button class="btn btn-dark">dark</button>
     <button class="btn btn-link">link</button>
     <button class="btn btn-info">info</button>
@@ -20,5 +21,12 @@
     <button class="btn btn-success">success</button>
     <button class="btn btn-secondary">secondary</button>
     <button class="btn btn-primary">primary</button>
+    </div>
+    <h1 class="text-primary bg-success">
+        Hello Wonderfull World.
+    </h1>
+    <img class="img-fluid w-25 rounded-circle img-thumbnail"  src="all-image/photo-one.png" alt="loding">
+    <img class="img-fluid w-25 rounded-circle img-thumbnail" src="all-image/photo-two.png" alt="">
+    <img class="img-fluid w-25 rounded img-thumbnail" src="all-image/images.jpg" alt="">
 </body>
 </html>
